# triton-blackhole

./: .gitignore  ADOPTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: __init__.py  demo_softmax_drift.py  demo_tile_bisect.py  demo_triton_add.py  demo_verify_ast_triton.py  demo_verify_drift.py
notebooks/: colab_killer_demo.ipynb  colab_smoke_test.ipynb
scripts/: publish.sh  wsl_verify.sh
tests/: test_bisect.py  test_classify_probe.py  test_compare.py  test_verify_drift.py
triton_blackhole/: __init__.py  bisect.py  classify.py  cli.py  compare.py  gridmap.py  instrument.py  probe.py  report.py  tolerances.py  triton_hooks.py  verify.py
